k8s/analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: lugx-gaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: buddhimaparakramage/analytics-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: lugx-gaming
spec:
  type: LoadBalancer
  ports:
    - port: 3002
      targetPort: 3002
  selector:
    app: analytics-service
