k8s/game-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service
  namespace: lugx-gaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-service
  template:
    metadata:
      labels:
        app: game-service
    spec:
      containers:
        - name: game-service
          image: buddhimaparakramage/game-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: game-service
  namespace: lugx-gaming
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: game-service
