k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: lugx-gaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: buddhimaparakramage/order-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: lugx-gaming
spec:
  type: LoadBalancer
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: order-service
