k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-gaming-ingress
  namespace: lugx-gaming
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: lugx.local
      http:
        paths:
          - path: /games
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  number: 3000
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3001
          - path: /track
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
